add popup to chrome extension (and temporarily break functionality)

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,7 +1,7 @@
 { "name": "Refreshing"
 , "version": "0.1"
 , "manifest_version": 2
-, "description": "Automatically reload file:// pages when their content changes. Uses a node.js server for change detection."
+, "description": "Automatically reload local pages when their content changes. Uses a node.js server for change detection."
 , "icons": 
   { "128": "icon-128.png" 
   }
@@ -10,11 +10,12 @@
   , "http://127.0.0.1:7052/*"
   ]
 , "background":
-  { "scripts": [ "main.js" ]
+  { "scripts": [ "background.js" ]
   }
-, "page_action": 
-  { "default_title": "Start refreshing" 
-  , "default_icon": "icon-grey-128.png" 
+, "page_action":
+  { "default_title": "Configure Refreshing"
+  , "default_icon": "icon-grey-128.png"
+  , "default_popup": "popup.html"
   }
 , "offline_enabled": true
 }
