--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -3,9 +3,9 @@
 , "manifest_version": 2
 , "description": "Automatically reload local pages when their content changes. Uses a node.js server for change detection."
 , "icons": 
-  { "16": "icons/16-off.png" 
-  , "48": "icons/48-off.png" 
-  , "128": "icons/128-off.png" 
+  { "16": "icons/16.png" 
+  , "48": "icons/48.png" 
+  , "128": "icons/128.png" 
   }
 , "permissions":
   [ "tabs"
@@ -16,7 +16,9 @@
   }
 , "page_action":
   { "default_title": "Configure Refreshing"
-  , "default_icon": "icons/48-off.png"
+  , "default_icon": 
+    { "19": "icons/19.png"
+    }
   , "default_popup": "popup.html"
   }
 , "offline_enabled": true
