improve pathname guessing
This refers to the pathname guessing in the popup.

Before, just stripped off the first seven characters. This worked specifically
for URLs prefixed with 'file://'. Now we use generic pathname extraction that
works on all URL types (using the DOM's url parsing).

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -12,7 +12,10 @@
   , "http://127.0.0.1:7052/*"
   ]
 , "background":
-  { "scripts": [ "background.js" ]
+  { "scripts":
+    [ "util.js"
+    , "background.js"
+    ]
   }
 , "page_action":
   { "default_title": "Configure Refreshing"
